argo-workflows/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argoworkflow
spec:
  host: workflows.apps.baloise.dev
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: Reencrypt
  to:
    kind: Service
    name: argo-server
    weight: 100
