argo-workflows/route2.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argo
spec:
  host: argo.apps.baloise.dev
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: argo-server
    weight: 100
